--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,12 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+       
+        <video width="1000" height="800" controls>
+  <source src="11.mp4" type="video/mp4">
+
+Your browser does not support the video tag.
+</video> 
+        
     </body>
 </html>
