--- a/web/happyhour/index.html
+++ b/web/happyhour/index.html
@@ -94,7 +94,7 @@
                         // model
 
                         var loader = new GLTFLoader();
-                        loader.load( '../examples/models/gltf/RobotExpressive.glb', function ( gltf ) {
+                        loader.load( './RobotExpressive.glb', function ( gltf ) {
 
                                 model = gltf.scene;
                                 scene.add( model );
