--- a/web/happyhour/index.html
+++ b/web/happyhour/index.html
@@ -257,7 +257,7 @@
 
                         renderer.render( scene, camera );
 
-                        stats.update();
+                      //  stats.update();
 
                 }
    
