add new dna stuff with my dearest daughter today!!!

--- a/web/Learning/firstmodel.html
+++ b/web/Learning/firstmodel.html
@@ -35,8 +35,8 @@
 
 			var scenes = {
                                owl: {
-					name: 'Owl',
-					url: './Owl.glb',
+					name: 'Flagella Motor',
+					url: './flagellamotorcompressed.glb',
 					author: 'Dailyn Guo',
 					authorURL: 'https://www.google.com',
                                         addLights: true,
